--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <header>
                         <h2><a href="https://github.com/danartech/Excel-Projects">Excel Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/microsoft-office-7040220_1280.png?raw=true"" alt="Excel Projects" /></a>
+                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/excel%20microsoft%20image.jpeg?raw=true"" alt="Excel Projects" /></a>
                     <p>Explore my data analysis projects created using Microsoft Excel.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Excel-Projects" class="button">View Projects</a></li>
