--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
                     </ul>
                 </article>
                  <article>
+                  <header>
+                        <h2><a href="https://github.com/danartech/SQL-Projects">All SQL Projects</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/SQL-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/sql%202.jpg?raw=true"" alt="SQL Projects" /></a>
+                    <p>Explore my data analysis projects created using SQL.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/SQL-Projects" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+                 <article>
             </section>
 
            <!-- Skills and Certifications -->
