--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                     </ul>
                 </article>
                  <article>
+                    </ul>
+                </article>
+                 <article>
             </section>
 
            <!-- Skills and Certifications -->
