--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                     </ul>
                 </article>
                  <article>
-                    </ul>
-
-            </section>
+                    </ul
+                </article>
+                 <article>
 
            <!-- Skills and Certifications -->
             <section id="skills-certifications-container" class="skills-certifications-container">
