--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </ul
                 </article>
                  <article>
-
+                 </section>
            <!-- Skills and Certifications -->
             <section id="skills-certifications-container" class="skills-certifications-container">
                 <div class="skills-certifications">
