--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
-        .contact-box, .skills-certifications, .sql-projects {
+        .contact-box, .skills-certifications {
             border: 1px solid #ddd;
             padding: 20px;
             margin: 20px 0;
             background: #f9f9f9;
         }
-        .contact-box h3, .skills-certifications h2, .sql-projects h2 {
+        .contact-box h3, .skills-certifications h2 {
             margin-bottom: 10px;
         }
-        .contact-box p, .skills-certifications ul, .sql-projects p {
+        .contact-box p, .skills-certifications ul {
             margin: 5px 0;
         }
-        .skills-certifications ul, .sql-projects ul {
+        .skills-certifications ul {
             list-style-type: none;
             padding: 0;
         }
-        .skills-certifications li, .sql-projects li {
+        .skills-certifications li {
             margin: 5px 0;
         }
         .skills-certifications-container {
@@ -36,7 +36,7 @@
             flex-wrap: wrap;
             gap: 20px;
         }
-        .skills-certifications, .sql-projects {
+        .skills-certifications {
             flex: 1;
             min-width: 200px; /* Adjust based on your design */
         }
@@ -53,7 +53,7 @@
             #intro {
                 padding-top: 20px;
             }
-            .contact-box, .skills-certifications, .sql-projects {
+            .contact-box, .skills-certifications {
                 padding: 10px;
                 margin: 10px 0;
             }
@@ -156,68 +156,150 @@
                     <header>
                         <h2><a href="https://github.com/danartech/Excel-Projects">Excel Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/excel%20microsoft%20image.jpeg?raw=true" alt="Excel Projects" /></a>
+                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/excel%20microsoft%20image.jpeg?raw=true"" alt="Excel Projects" /></a>
                     <p>Explore my data analysis projects created using Microsoft Excel.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Excel-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
-                <article class="sql-projects">
-                    <header>
+                 <article>
+                  <header>
                         <h2><a href="https://github.com/danartech/SQL-Projects">All SQL Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/SQL-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/sql%202.jpg?raw=true" alt="SQL Projects" /></a>
+                    <a href="https://github.com/danartech/SQL-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/sql%202.jpg?raw=true"" alt="SQL Projects" /></a>
                     <p>Explore my data analysis projects created using SQL.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/SQL-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
+                 <article>
+                    </ul>
+                </article>
+                 <article>
             </section>
 
-            <!-- Skills & Certifications -->
+           <!-- Skills and Certifications -->
             <section id="skills-certifications-container" class="skills-certifications-container">
+                <div class="skills-certifications">
+                    <h2>Certifications</h2>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/9YtURZR.png" alt="CompTIA Security+">
+                        <div>
+                            <h3>🔐 CompTIA Security+</h3>
+                            <a href="https://www.credly.com/badges/ab411b1b-2f15-4161-8340-78d1071d077c/public_url">CompTIA Security+</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/KQNAdOm.png" alt="CompTIA Network+">
+                        <div>
+                            <h3>🌐 CompTIA Network+</h3>
+                            <a href="https://www.credly.com/badges/e49b2a76-d09c-4e72-8f7f-4839f9d6bc8f/public_url">CompTIA Network+</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/a1N480G.png" alt="CompTIA A+">
+                        <div>
+                            <h3>💻 CompTIA A+</h3>
+                            <a href="https://www.credly.com/badges/d273c5b6-a92a-481b-9bfc-fdd1a81cbdc9/public_url">CompTIA A+</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/GsL3t5t.png" alt="AWS Certified Cloud Practitioner">
+                        <div>
+                            <h3>☁️ AWS Cloud Practitioner</h3>
+                            <a href="https://www.credly.com/badges/0d41c123-b789-4582-9d4e-fd317f2bbb2e/public_url">AWS Certified Cloud Practitioner</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/hOW7rTQ.png" alt="Microsoft Certified: Azure Fundamentals">
+                        <div>
+                            <h3>📘 Azure Fundamentals</h3>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/DanaRobinson-5540/ADC24F83CC636771?sharingId=D08918252DFABD21">Microsoft Certified: Azure Fundamentals</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/lctxOq1.png" alt="Google Data Analytics">
+                        <div>
+                            <h3>📊 Google Data Analytics</h3>
+                            <a href="https://coursera.org/share/4ed75de36411d7d5c0389e2d61a2c2ff">Google Data Analytics Certificate</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/FAkm4Zi.png" alt="Google Cybersecurity Certificate">
+                        <div>
+                            <h3>🔒 Google Cybersecurity</h3>
+                            <a href="https://www.credly.com/badges/68cc3a44-5686-42d8-8745-81de1fc071e1/public_url">Google Cybersecurity Certificate</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/t7zm1cY.png" alt="Google IT Support Certificate">
+                        <div>
+                            <h3>🛠️ Google IT Support</h3>
+                            <a href="https://www.credly.com/badges/7f5c8e1d-7c71-4b53-94a1-8440218cfb97/public_url">Google IT Support Certificate</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/xiEJ7PF.png" alt="Python for Data Science and AI">
+                        <div>
+                            <h3>🐍 Python for Data Science</h3>
+                            <a href="https://www.credly.com/badges/4f0fcef8-75d4-4114-9ccc-20a10d21f494/public_url">Python for Data Science and AI</a>
+                        </div>
+                    </div>
+                    <div class="certification-item">
+                        <img src="https://i.imgur.com/hYLpafU.png" alt="DevOps Essentials">
+                        <div>
+                            <h3>🚀 DevOps Essentials</h3>
+                            <a href="https://www.credly.com/badges/f69eaab3-761a-47bd-85ed-dde1ea5aa652/public_url">DevOps Essentials</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="skills-certifications">
                     <h2>Skills</h2>
                     <ul>
-                        <li>SQL</li>
-                        <li>Python</li>
                         <li>Excel</li>
+                        <li>SQL</li>
                         <li>Tableau</li>
-                        <li>Power BI</li>
-                        <li>Cloud Technologies (AWS, Azure)</li>
-                        <li>Cybersecurity Fundamentals</li>
+                        <li>Python</li>
+                        <li>Cloud Technologies</li>
+                        <li>Cybersecurity</li>
+                        <li>Data Cleaning</li>
+                        <li>Data Exploration</li>
+                        <li>Interactive Dashboards</li>
                     </ul>
-                </div>
-                <div class="certification-item">
-                    <img src="https://via.placeholder.com/100" alt="Certification Badge">
-                    <div>
-                        <h3>Google Data Analytics Professional Certificate</h3>
-                        <p>Issued by Google</p>
-                    </div>
                 </div>
             </section>
 
-            <!-- Footer -->
-            <footer id="footer">
-                <section>
-                    <h2>About Me</h2>
-                    <p>Data Analyst with a passion for leveraging data-driven insights to drive business decisions. Skilled in SQL, Python, Excel, Tableau, Power BI, and cloud technologies. Check out my projects and connect with me on LinkedIn and GitHub!</p>
-                    <ul class="actions">
-                        <li><a href="#intro" class="button primary icon solid fa-arrow-up scrolly">Intro</a></li>
-                    </ul>
-                </section>
-            </footer>
-
+            <!-- Contact -->
+            <section class="contact-box">
+                <h3>Location</h3>
+                <p>Aurora, CO 80017</p>
+                <h3>Phone</h3>
+                <p><a href="tel:+17209821564">(720) 982-1564</a></p>
+                <h3>Email</h3>
+                <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
+                <h3>Social</h3>
+                <ul class="icons alt">
+                    <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
+            </section>
         </div>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
+        <!-- Copyright -->
+        <div id="@danartech">
+            <ul><li>&copy; <a href="https://github.com/danartech">danartech on GitHub</a></li></ul>
+        </div>
 
     </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 </html>
