--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Dana Robinson Portfolio</title>
+    <title>Dana Robinson's Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -110,6 +110,18 @@
                 </ul>
             </article>
 
+            <!-- New Featured Project -->
+            <article class="post featured">
+                <header class="major">
+                    <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Tesla Stock Price Analytics</a></h2>
+                    <p>Analyzed Tesla's stock price trends using Tableau to create interactive visualizations and insights.</p>
+                </header>
+                <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/tesla_stock.jpg" alt="Tesla Stock Price Analytics" /></a>
+                <ul class="actions special">
+                    <li><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button large">View Project</a></li>
+                </ul>
+            </article>
+
             <!-- Posts -->
             <section class="posts">
                 <article>
@@ -156,23 +168,36 @@
                     <header>
                         <h2><a href="https://github.com/danartech/SQL-Projects">All SQL Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/SQL-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/sql%20plain.jpg?raw=true"" alt="SQL Projects" /></a>
+                    <a href="https://github.com/danartech/SQL-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/sql%20plain.jpg?raw=true" alt="SQL Projects" /></a>
                     <p>Explore my data analysis projects created using SQL.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/SQL-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
-                 <article>    
+                <article>    
                     <header>
                         <h2><a href="https://github.com/danartech/Excel-Projects">Excel Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/excel%20microsoft%20image.jpeg?raw=true"" alt="Excel Projects" /></a>
+                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/excel%20microsoft%20image.jpeg?raw=true" alt="Excel Projects" /></a>
                     <p>Explore my data analysis projects created using Microsoft Excel.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Excel-Projects" class="button">View Projects</a></li>
                     </ul>
-             </section>
-           <!-- Skills and Certifications -->
+                </article>
+                <!-- New Cloud Projects Post -->
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/danartech">Cloud Projects</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech" class="image fit"><img src="images/cloud_projects.jpg" alt="Cloud Projects" /></a>
+                    <p>Browse my GitHub repository for various cloud projects showcasing cloud engineering skills.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+            </section>
+
+            <!-- Skills and Certifications -->
             <section id="skills-certifications-container" class="skills-certifications-container">
                 <div class="skills-certifications">
                     <h2>Certifications</h2>
