--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <!-- New Featured Project -->
             <article class="post featured">
                 <header class="major">
-                    <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Tesla Stock Price Analytics</a></h2>
+                    <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></a></h2>
                     <p>Analyzed Tesla's stock price trends using Tableau to create interactive visualizations and insights.</p>
                 </header>
-                <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/tesla_stock.jpg" alt="Tesla Stock Price Analytics" /></a>
+                <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/teslalogo.png" alt="Tesla Stock Price Analytics" /></a>
                 <ul class="actions special">
                     <li><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button large">View Project</a></li>
                 </ul>
@@ -189,7 +189,7 @@
                     <header>
                         <h2><a href="https://github.com/danartech">Cloud Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech" class="image fit"><img src="images/cloud_projects.jpg" alt="Cloud Projects" /></a>
+                    <a href="https://github.com/danartech" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/Cloud%20Computing.jpeg" alt="Cloud Projects" /></a>
                     <p>Browse my GitHub repository for various cloud projects showcasing cloud engineering skills.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech" class="button">View Projects</a></li>
