--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                     <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></a></h2>
                     <p>Analyzed Tesla's stock price trends using Tableau to create interactive visualizations and insights.</p>
                 </header>
-                <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src=/images/teslalogo.png" alt="Tesla Stock Price Analytics" /></a>
-                <ul class="actions special">
+                <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/teslalogo.png" alt="Tesla Logo" /></a>
                     <li><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button large">View Project</a></li>
                 </ul>
             </article>
