--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Tesla Stock Analysis Tableau Project</a></h2>
+                        <h2><a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Tesla Stock Analysis</a></h2>
                     </header>
                     <a href="https://public.tableau.com/views/TeslaStockPriceAnalytics_DanaRobinson/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/teslalogo.png" alt="Tesla Stock Analysis" /></a>
                     <p>Analyzed Tesla's stock price trends using Tableau to create interactive visualizations and insights.</p>
