--- a/index.html
+++ b/index.html
@@ -135,6 +135,36 @@
                 </article>
                 <article>
                     <header>
+                        <h2><a href="https://github.com/danartech/Honeynet-Azure-Project">Honeypot With Live Cyber Attacks</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/Honeynet-Azure-Project" class="image fit"><img src="images/cybersecurity.png" alt="Cybersecurity Projects" /></a>
+                    <p>Implemented a SOC and Honeynet on Azure using Microsoft Sentinel(SIEM).</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/Honeynet-Azure-Project" class="button">View Project</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting">Networking Projects</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting" class="image fit"><img src="images/ComputerNetworking.jpg" alt="Networking Projects" /></a>
+                    <p>View my computer networking projects on GitHub.(SIEM).</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting" class="button">View Projects</a></li>
+                    </ul>
+            </article>           
+            <article>
+                    <header>
+                        <h2><a href="https://github.com/danartech/Python-Projects">Python Projects</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/Python-Projects" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
+                    <p>Discover my Python projects showcasing data analysis and automation skills.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/Python-Projects" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
                         <h2><a href="https://github.com/danartech">Cloud Projects</a></h2>
                     </header>
                     <a href="https://github.com/danartech" class="image fit"><img src="images/Cloud Computing.jpeg" alt="Cloud Projects" /></a>
@@ -151,16 +181,6 @@
                     <p>Explore various dashboards and visualizations created using Tableau.</p>
                     <ul class="actions special">
                         <li><a href="https://public.tableau.com/app/profile/dana.robinson" class="button">View Projects</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2><a href="https://github.com/danartech/Python-Projects">Python Projects</a></h2>
-                    </header>
-                    <a href="https://github.com/danartech/Python-Projects" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
-                    <p>Discover my Python projects showcasing data analysis and automation skills.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/danartech/Python-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
                 <article>
