--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/danartech/Honeynet-Azure-Project">Honeypot With Live Cyber Attacks</a></h2>
+                        <h2><a href="https://github.com/danartech/Honeynet-Azure-Project">Honeypot Cyber Attacks</a></h2>
                     </header>
                     <a href="https://github.com/danartech/Honeynet-Azure-Project" class="image fit"><img src="images/cybersecurity.png" alt="Cybersecurity Projects" /></a>
                     <p>Implemented a SOC and Honeynet on Azure using Microsoft Sentinel(SIEM).</p>
@@ -148,7 +148,7 @@
                         <h2><a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting">Networking Projects</a></h2>
                     </header>
                     <a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting" class="image fit"><img src="images/ComputerNetworking.jpg" alt="Networking Projects" /></a>
-                    <p>View my computer networking projects on GitHub.(SIEM).</p>
+                    <p>View my computer networking projects on GitHub.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Network-Configuration-and-Troubleshooting" class="button">View Projects</a></li>
                     </ul>
